Actualizacion de fuentes y de README

--- a/frontend/singlepage-cv/index.html
+++ b/frontend/singlepage-cv/index.html
@@ -4,19 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Online CV of Álvaro Ley, Junior Full Stack Developer. Desarrollado en single page">
+    <meta name="description"
+        content="Online CV of Álvaro Ley, Junior Full Stack Developer. Desarrollado en single page">
     <meta name="keywords" content="cv, curriculum vitae, html, web developer, programmer, roadmap, frontend">
     <meta name="author" content="Álvaro Ley">
     <meta name="robots" content="index, follow">
     <title>Álvaro Ley | Web Developer | CV Online</title>
     <link rel="icon" href="img/icon.png" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
 
     <style>
+        :root {
+            color-scheme: light dark;
+        }
+
         body {
             max-width: 50%;
             margin: 0 auto;
-            border: 3px solid light-dark(black,white);
+            border: 3px solid light-dark(black, white);
             padding: 4rem;
             margin-top: 15px;
             font-family: 'Nunito', sans-serif;
@@ -25,7 +30,7 @@
         hr {
             width: 70%;
             margin-left: 0;
-            border: 2px solid light-dark(black,white);
+            border: 2px solid light-dark(black, white);
         }
 
         h2 {
@@ -57,10 +62,12 @@
 
         }
 
-        h2,h3,p,a {
-            text-wrap:pretty;
+        h2,
+        h3,
+        p,
+        a {
+            text-wrap: pretty;
         }
-        
     </style>
 </head>
 
@@ -90,12 +97,12 @@
         <h2>Education</h2>
         <article>
             <h3>Deusto Formación - Full Stack Developer</h3>
-            January 2024 to December 2024<br>
+            <strong>January 2024 to December 2024</strong><br>
             Learned modern web development, including frontend/backend frameworks, databases, and deployment<br>
         </article>
         <article>
             <h3>CES Escuela de Imagen y Sonido, Madrid - Técnico Superior de Sonido</h3>
-            September 2011 to July 2013<br>
+            <strong>September 2011 to July 2013</strong><br>
             Specialized in audio production, editing, and post-production for studio environments<br>
         </article>
     </section>
@@ -103,7 +110,7 @@
         <h2>Experience</h2>
         <article>
             <h3>Several dubbing studios, Madrid - Audio Engineer</h3>
-            September 2013 to currently<br>
+            <strong>September 2013 to currently</strong><br>
             <ul>
                 <li>Optimized audio production workflows to improve efficiency by 20%.</li>
                 <li>Collaborated with international teams to deliver high-quality dubbing projects.</li>
@@ -114,7 +121,7 @@
         </article>
         <article>
             <h3>Peñafiel Proyectos, Madrid - Low Voltage Electrician</h3>
-            October 2020 to January 2024<br>
+            <strong>October 2020 to January 2024</strong><br>
             <ul>
                 <li>Implemented energy-efficient electrical solutions, reducing costs for clients.</li>
                 <li>Diagnosed and repaired complex electrical faults under tight deadlines.</li>
@@ -127,8 +134,10 @@
     <section>
         <h2>Across the internet</h2>
         Feel free to explore my work and connect with me:<br>
-        <a href="https://github.com/alvaroleyg">GitHub</a><br>
-        <a href="https://www.linkedin.com/in/%C3%A1lvaro-ley-garc%C3%ADa-a6b51216a/">LinkedIn</a><br>
+        <ul>
+            <li><a href="https://github.com/alvaroleyg">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/%C3%A1lvaro-ley-garc%C3%ADa-a6b51216a/">LinkedIn</a></li>
+        </ul>
     </section>
 
 </body>
